// 购物车模块定义

syntax = "proto3";

package cart;

option go_package = 'bytedancemall/cart/proto;cart';

service CartService {
  rpc AddItem(AddItemReq) returns (AddItemResp) {}
  rpc GetCart(GetCartReq) returns (GetCartResp) {}
  rpc RemoveItem(RemoveItemReq) returns (RemoveItemResp) {}
  rpc HasItem(HasItemReq) returns (HasItemResp) {}
}

// 请求参数
message AddItemReq {
  uint64 user_id = 1;
  uint64 product_id = 2;
}

message AddItemResp {
  bool result = 1;
}

message GetCartReq {
  uint64 user_id = 1;
}

message CartItem {
  uint64 product_id = 1;
  double origin_price = 2;
  uint64 quantity = 3;
}

message GetCartResp {
  repeated CartItem items = 1;
  bool result = 2;
}

message RemoveItemReq {
  uint64 user_id = 1;
  uint64 product_id = 2;
}

message RemoveItemResp {
  bool result = 1;
}

message HasItemReq {
  uint64 user_id = 1;
  uint64 product_id = 2;
}

message HasItemResp {
  bool has_item = 1;
}